--- a/react/widgets/package.json
+++ b/react/widgets/package.json
@@ -2,7 +2,7 @@
   "name": "widgets",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "widgets.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch"
