--- a/react/widgets/package.json
+++ b/react/widgets/package.json
@@ -2,7 +2,7 @@
   "name": "widgets",
   "version": "1.0.0",
   "description": "",
-  "main": "widgets.jsx",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch"
@@ -19,5 +19,9 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.10"
   }
 }
