--- a/react/widgets/package.json
+++ b/react/widgets/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
