--- a/react/widgets/package.json
+++ b/react/widgets/package.json
@@ -5,24 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch"
+    "start": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "webpack": "^3.8.1"
-  },
-  "devDependencies": {
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.1.4",
+    "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.6",
+    "react-dom": "^0.14.2",
+    "webpack": "^2.2.1"
   }
 }
