--- a/react/widgets/package.json
+++ b/react/widgets/package.json
@@ -19,5 +19,8 @@
     "react-addons-css-transition-group": "^0.14.6",
     "react-dom": "^0.14.2",
     "webpack": "^2.2.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.0.12"
   }
 }
